# cryptmon

./: Cargo.toml  README.md  example_cryptmon_config.ini
src/: alert_provider.rs  alert_provider_pushsafer.rs  alert_provider_simplepush.rs  alert_provider_smtp_mail.rs  alert_provider_textbelt.rs  alert_service.rs  cli_table_printer.rs  config.rs  formatting_helpers.rs  main.rs  price_provider.rs  price_provider_coingecko.rs  price_provider_coinmarketcap.rs  price_provider_cryptocompare.rs  price_view_terminal.rs
